# benchmark

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  renovate.json
.github/workflows/: casestudy-django-github.yml  casestudy-django-tempus.yml  casestudy-django.yml  casestudy-flask-github.yml  casestudy-flask-tempus.yml  casestudy-flask.yml  ci.yml
case-studies/: README.md
case-studies/projects/: django.yaml  flask.yaml
docs/: methodology.md
docs/results/: README.md
scripts/: case_study_collect.py  test_case_study_collect.py
